# python-postgres-parser

./: .gitignore  .gitmodules  MANIFEST.in  Makefile  README.rst  build.py  dev-requirements.txt  pyproject.toml  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: ci.yml
build-tools/: _exported_constants.py.j2  _version.py.j2  autogen_constants.py  c_definitions.pxd.j2  enums.py.j2  h2w_hooks.py  struct_definitions.pxd.j2
postgres_parser/: __init__.py  _c_wrapper.pyi  _c_wrapper.pyx  _version.py  errors.py
tests/: test_interface.py
